@@ -1,3 +1,8 @@
+2013-01-14  Glenn Morris  <rgm@gnu.org>
+
+	* progmodes/compile.el (compilation-error-regexp-alist-alist):
+	Fix interpretation of gnu line.col1-col2 format.  (Bug#13335)
+
 2013-01-13  Fabián Ezequiel Gallina  <fgallina@cuca>
 
 	* progmodes/python.el (python-nav-end-of-statement): Fix
